2006-01-02  Ben Elliston  <bje@gnu.org>

	* configure.ac (AC_INIT): Set version to 1.4.99.
	* configure: Regenerate.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Add runtest_file_p.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp (frame_version): Set to 1.4.99.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* dejagnu.h: Update copyright notice.  Use C-style /* .. */
	comments for portability with ISO C compilers.
	* testsuite/libdejagnu/unit.cc: Likewise, update copyright notice.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Update copyright notice.
	* example/calc/testsuite/calc.test/calc.exp: Likewise.
	* example/calc/testsuite/config/unix.exp: Likewise.
	* testsuite/libdejagnu/tunit.exp: Likewise.
	* testsuite/runtest.all/libs.exp: Likewise.
	* testsuite/runtest.all/options.exp: Likewise.
	* testsuite/runtest.all/stats-sub.exp: Likewise.
	* testsuite/runtest.all/stats.exp: Likewise.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* config/default.exp, config/unix.exp, config/vxworks.exp,
	lib/debugger.exp, lib/dejagnu.exp, lib/framework.exp,
	lib/libgloss.exp, lib/remote.exp, testsuite/lib/util-defs.exp:
	Formatting fixes.
	* dejagnu.h, testsuite/config/default.exp,
	testsuite/lib/libsup.exp, testsuite/libdejagnu/tunit.exp,
	testsuite/libdejagnu/unit.cc, testsuite/runtest.all/libs.exp,
	testsuite/runtest.all/options.exp,
	testsuite/runtest.all/stats-sub.exp,
	testsuite/runtest.all/stats.exp: Update copyright notice and FSF
	office address. Remove bug reporting address, as it is now
	maintained centrally in the README file.

2005-12-31  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Don't bother mentioning
	absolute, psource, prune and slay as untested procedures.

2005-12-31  Ben Elliston  <bje@gnu.org>

	* doc/ref.xml (Utility Procedures): Note that the following
	procedures are deprecated: absolute, psource, prune, slay.
	* NEWS: Likewise.
	* doc/dejagnu.texi: Regenerate.
