@@ -1,4 +1,5 @@
-# Copyright (C) 1992, 1993 - 2005 Free Software Foundation, Inc.
+# Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
+# 2001, 2002, 2003, 2004, 2005 Free Software Foundation, Inc.
 #
 # This file is part of DejaGnu.
 #
@@ -16,14 +17,13 @@
 # along with DejaGnu; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
 
-# This file was written by Rob Savoye. (rob@welcomehome.org)
-# and extensively modified by Bob Manson. (manson@cygnus.com)
+# This file was written by Rob Savoye <rob@welcomehome.org> and
+# extensively modified by Bob Manson <manson@cygnus.com>.
 
-# a hairy pattern to recognize text
+# A hairy pattern to recognize text.
 set text "\[- A-Za-z0-9\.\;\"\_\:\'\`\(\)\!\#\=\+\?\&\*]"
 
-#
-# this is a collection of support procs for the target data
+# This is a collection of support procs for the target data
 # structures. We use a named array, since Tcl has no real data
 # structures. Here's the special index words for the array:
 #       Required fields are:
@@ -55,7 +55,6 @@ set text "\[- A-Za-z0-9\.\;\"\_\:\'\`\(\)\!\#\=\+\?\&\*]"
 # like "idp", or "ex93x.ld".
 #
 
-#
 # Set the target connection.
 #
 proc push_target { name } {
@@ -65,7 +64,6 @@ proc push_target { name } {
     push_config target $name
 }
 
-#
 # Set the host connnection.
 #
 proc push_host { name } {
@@ -73,7 +71,6 @@ proc push_host { name } {
     push_config host $name
 }
 
-#
 # Set the build connnection.
 #
 proc push_build { name } {
@@ -81,7 +78,6 @@ proc push_build { name } {
     push_config build $name
 }
 
-#
 # Set the config for the current host or target connection.
 #
 proc push_config { type name } {
@@ -96,7 +92,6 @@ proc push_config { type name } {
     set target_info($type,name) $name
 }
 
-#
 # Set the current connection for target or host.
 #
 proc pop_config { type  } {
@@ -107,21 +102,18 @@ proc pop_config { type  } {
     }
 }
 
-#
 # Unset the target connection.
 #
 proc pop_target { } {
     pop_config target
 }
 
-#
 # Unset the host connection.
 #
 proc pop_host { } {
     pop_config host
 }
 
-#
 # Remove extraneous warnings from TEXT.
 #
 # An example is:
@@ -297,11 +289,9 @@ proc prune_warnings { text } {
     return $text
 }
 
-#
 # Invoke the compiler. This gets interesting cause the compiler may
 # not be on the same machine we're running DejaGnu on.
 #
-
 proc target_compile {source destfile type options} {
     set target [target_info name]
     if { [info proc ${target}_compile] != "" } {
@@ -345,7 +335,6 @@ proc default_target_compile {source destfile type options} {
 	    if [board_info $dest exists adaflags] {
 		append add_flags " [target_info adaflags]"
 	    }
-	    # append add_flags " [gnatmake_include_flags]";
 	    if [board_info $dest exists gnatmake] {
 		set compiler [target_info gnatmake];
 	    } else {
@@ -371,7 +360,6 @@ proc default_target_compile {source destfile type options} {
 	    if [board_info $dest exists f77flags] {
 		append add_flags " [target_info f77flags]"
 	    }
-#	    append add_flags " [f77_include_flags]"
 	    if [board_info $dest exists f77compiler] {
 		set compiler [target_info f77compiler]
 	    } else {
@@ -488,11 +476,6 @@ proc default_target_compile {source destfile type options} {
     }
 
     if { $type == "executable" } {
-	# This must be added here.
-	# if [board_info $dest exists ldscript] {
-	#     append add_flags " [board_info $dest ldscript]"
-	# }
-
 	if [board_info $dest exists ldflags] {
 	    append add_flags " [board_info $dest ldflags]"
 	}
@@ -507,10 +490,10 @@ proc default_target_compile {source destfile type options} {
 		    # Solaris 2
 		    append add_flags " -R$tool_root_dir/libstdc++"
 		} elseif [regexp ".*(osf|irix5|linux).*" $target_triplet] {
-		    # OSF/1 or Irix5
+		    # OSF/1 or IRIX 5
 		    append add_flags " -Wl,-rpath,$tool_root_dir/libstdc++"
 		} elseif [regexp ".*hppa.*" $target_triplet] {
-		    # HP/UX
+		    # HP-UX
 		    append add_flags " -Wl,-a,shared_archive"
 		}
 	    }
@@ -660,7 +643,6 @@ proc reboot_target { } {
     return ${result}
 }
 
-#
 # Invoke this if you really want as to be called directly, rather than
 # calling the compiler. FLAGS are any additional flags to pass to the
 # assembler.
@@ -708,7 +690,6 @@ proc default_target_assemble { source destfile flags } {
     return ${comp_output}
 }
 
-#
 # Invoke this if you really want ld to be called directly, rather than
 # calling the compiler. FLAGS are any additional flags to pass to the
 # linker.
